fixed issues with naming conventions, sorting by height in people's API, height in cm, add comments
