# api/controllers/peoplecontroller.js
@@ -1,11 +1,16 @@
-const peopleService = require('../../services/peopleservice');
+const peopleService = require('../../services/peopleService');
 
-const getPeople = (req, res) => {
-    const sortParam = req.query.sort;
-    const filterParam = req.query.filter;
-    peopleService.getPeople(sortParam, filterParam)
-        .then(people => res.status(200).json(people))
-        .catch(error => res.status(500));
+const getPeople = async (req, res) => {
+    try {
+        const sortParam = req.query.sort;
+        const filterParam = req.query.filter;
+
+        const people = await peopleService.getPeople(sortParam, filterParam);
+
+        return people ? res.status(200).json(people) : res.status(404);
+    } catch(err) {
+        return res.status(400).json({ error: err.message });
+    }
 }
 
 
